force-app/main/default/objects/Meeting_Attendee__c/Meeting_Attendee__c.object-meta.xml
<CustomObject>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>MAC-{000000000}</displayFormat>
        <label>Meeting Attendee Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>