force-app/main/default/objects/Meeting_Attendee__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>